# SlicerDICOMwebBrowser

./: CMakeLists.txt  README.md
DICOMwebBrowser/: CMakeLists.txt  DICOMwebBrowser.py
Docs/: DICOMwebBrowser.xcf
